--- a/index.html
+++ b/index.html
@@ -108,14 +108,18 @@
     <section>
         <div id="confirmation">                        
                <div class="text-center">
+                <div class="row">
+                <div class="cal-md-4"></div>
+                <div class="cal-md-4 m-auto text-center">
                   <div class="booking-confirmation">
                      <h1 style="font-size: 40px;">Your booking has been</h1>
                      <h1 style="font-size: 45px;">confirmed</h1>
                      <br>
                      <br>
                      <h1>Have a safe journey</h1>
-                </div>            
-         </div>
+                    </div>
+                </div>
+             </div>
      </section>
 
     <!--Thank You-->
