--- a/index.html
+++ b/index.html
@@ -107,10 +107,10 @@
     
     <section>
         <div id="confirmation">                        
-               <div class="text-center">
+               <div>
                 <div class="row">
                 <div class="cal-md-4"></div>
-                <div class="cal-md-4 text-center">
+                <div class="cal-md-4">
                   <div class="booking-confirmation">
                      <h1 style="font-size: 40px;">Your booking has been</h1>
                      <h1 style="font-size: 45px;">confirmed</h1>
